[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stego-vault"
version = "1.0.0"
description = "Herramienta de análisis de esteganografía para detectar datos ocultos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Shadow-King-Cyber"}]
keywords = ["security", "steganography", "forensics", "data-hiding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
stego-vault = "stego_vault.ui.cli:main"

[tool.setuptools.packages.find]
include = ["stego_vault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
